# qiskit-viz

./: CLAUDE.md  LICENSE  Makefile  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  main.py  pyproject.toml
backend/src/: quantum.py  routes.py  schemas.py
frontend/: .dockerignore  .gitignore  Dockerfile  eslint.config.ts  openapi-ts.config.ts  package-lock.json  package.json  prettier.config.ts  vite.config.ts
frontend/.storybook/: preview.ts
frontend/src/lib/api/: client.gen.ts  sdk.gen.ts  types.gen.ts
frontend/src/lib/components/: BlochSphere.svelte  CircuitBuilder.svelte  StatevectorDisplay.svelte
frontend/src/routes/: +layout.svelte  +page.svelte  layout.css
