[project]
name = "backend"
version = "0.1.0"
description = "FastAPI application that provides interface to frontend for running quantum experiments"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.124.2",
    "numpy>=2.3.5",
    "pydantic>=2.12.5",
    "qiskit>=2.2.3",
    "uvicorn>=0.38.0",
]
